# MobileTiltMouse

./: LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: AppAndroid.yml  AppiOS.yml  codeql.yml  server.yml
AppAndroid/: .gitignore  README.md  settings.gradle.kts
AppAndroid/app/: build.gradle.kts
AppAndroid/app/src/androidTest/java/com/example/mobiletiltmouse/: CertificateTest.kt  ClientCertificateTest.kt  IntegrationTest.kt  MainActivityTest.kt  MouseButtonsTest.kt  MouseTogglesTest.kt  PairingEntryTest.kt  PairingTest.kt  SettingsSheetTest.kt  UserSettingsTest.kt
AppAndroid/app/src/main/: AndroidManifest.xml
AppAndroid/app/src/main/assets/: cert.p12  cert_client.der  key_client.der
AppAndroid/app/src/main/java/com/example/mobiletiltmouse/: Connection.kt  MainActivity.kt  MouseActions.kt  MouseButtons.kt  MouseToggles.kt  Pairing.kt  (+6 more)
AppAndroid/app/src/main/res/drawable/: rounded_keep_24.xml  settings_24px.xml
AppAndroid/app/src/main/res/values/: strings.xml  themes.xml
AppAndroid/gradle/: libs.versions.toml
AppAndroid/gradle/wrapper/: gradle-wrapper.properties
AppiOS/: .gitignore  MobileTiltMouse.xctestplan  README.md
AppiOS/MobileTiltMouse/: Connection.swift  ContentView.swift  Info.plist  MobileTiltMouseApp.swift  MouseActions.swift  MouseButtonsView.swift  MouseTogglesView.swift  NetworkBrowser.swift  NetworkMonitor.swift  Pairing.swift  PairingView.swift  RemoteAccess.swift  SettingsView.swift
AppiOS/MobileTiltMouse.xcodeproj/: project.pbxproj
AppiOS/MobileTiltMouse.xcodeproj/xcshareddata/xcschemes/: MobileTiltMouse.xcscheme
AppiOS/MobileTiltMouse/Assets.xcassets/AppIcon.appiconset/: Contents.json
AppiOS/MobileTiltMouse/Assets.xcassets/ClientCertificate.dataset/: Contents.json  cert.p12
AppiOS/MobileTiltMouse/Assets.xcassets/ServerCertHash.dataset/: Contents.json
AppiOS/MobileTiltMouseTests/: ConnectionTests.swift  MouseActionsTests.swift  NetworkBrowserTests.swift  PairingTests.swift
AppiOS/MobileTiltMouseUITests/: IntegrationTests.swift  MobileMouseUITests.swift  MobileTiltMouseUITests.swift
server/: Cargo.toml  README.md  build.rs
server/src/: auth_client.rs  cert.der  cert.p12  key.der  lib.rs  main.rs  mouse_control.rs  pairing.rs
server/tests/: integration_tests.rs
(+4 files in other folders)
