[package]
name = "mobile_tilt_mouse"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm-siv = "0.11"
enigo = { version = "0.6", default-features = false, features = ["xdo"] }
hex = "0.4.3"
hkdf = "0.12"
p12-keystore = "0.2"
quinn = "0.11"
rand = "0.9"
rand_pcg = "0.9.0"
rand_core = "0.9.5"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
zeroconf = "0.17"
zeroize = "1.8"

[dev-dependencies]
rdev = "0.5.3"

[build-dependencies]
rcgen = { version = "0.14.7", features = ["aws_lc_rs"] }
p12-keystore = "0.2"
sha2 = "0.10"
rand = "0.9"
rand_pcg = "0.9.0"
rand_core = "0.9.5"

