[package]
name = "mobile_tilt_mouse"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm-siv = "0.11.1"
enigo = { version = "0.6.1", default-features = false, features = ["xdo"] }
hex = "0.4.3"
hkdf = "0.12.4"
p12-keystore = "0.2.0"
quinn = "0.11.9"
rand = "0.10.0"
rand_pcg = "0.10.1"
rand_core = "0.10.0"
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std"] }
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
zeroconf = "0.17.0"
zeroize = "1.8.2"

[dev-dependencies]
rdev = "0.5.3"

[build-dependencies]
hex = "0.4.3"
rcgen = { version = "0.14.7", features = ["aws_lc_rs"] }
p12-keystore = "0.2.0"
rand = "0.10.0"
rand_pcg = "0.10.1"
rand_core = "0.10.0"
sha2 = "0.10.9"
